fixed svg sizing issue on firefox

--- a/style.scss
+++ b/style.scss
@@ -250,6 +250,9 @@ header .topnav {
     ul li {
         padding-bottom: 2rem;
     }
+    svg {
+        height: 3.4375rem;
+    }
 }
 
 ::-moz-selection {
